6rd challenge: sort's implementation remained